--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.database.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.database.url=org.h2.Driver
 spring.datasource.username=sa
