--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.database.url=org.h2.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=sa
